- updated copyright management
- added some javadocs