@@ -5,7 +5,7 @@
 
 	<groupId>io.github.mtrevisan</groupId>
 	<artifactId>boxon</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.1-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -241,6 +241,8 @@
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.codecs.managers.matchers=ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.codecs.queclink=spring.core,spring.expression,ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core=spring.core,ALL-UNNAMED
+						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.internal=ALL-UNNAMED
+						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.external.codecs=ALL-UNNAMED
 						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.external.semanticversioning=ALL-UNNAMED
 					</argLine>
 				</configuration>
@@ -259,6 +261,14 @@
 					  TODO:
 						 Remove .mvn/jvm.config after OSSRH-66257, NEXUS-26993 are fixed,
 						 possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
+						 Content of the file is:
+							&#45;&#45;add-opens java.base/java.io=ALL-UNNAMED
+							&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED
+							&#45;&#45;add-opens java.base/java.lang.reflect=ALL-UNNAMED
+							&#45;&#45;add-opens java.base/java.text=ALL-UNNAMED
+							&#45;&#45;add-opens java.base/java.util=ALL-UNNAMED
+							&#45;&#45;add-opens java.base/java.util.concurrent=ALL-UNNAMED
+							&#45;&#45;add-opens java.desktop/java.awt.font=ALL-UNNAMED
 					-->
 				</configuration>
 			</plugin>
